feat: add support for scope based captcha/pow
