# src/presentation/ident/controllers/captcha.guard.ts
@@ -5,14 +5,28 @@ import {
   InvalidCaptchaStampError,
   MalformedCaptchaStampError,
 } from 'src/lib/models';
+import { Reflector } from '@nestjs/core';
+import { CaptchaScope } from './captcha-scope.decorator';
 
 @Injectable()
 export class CaptchaGuard implements CanActivate {
-  constructor(private readonly captchaService: CaptchaService) {}
+  constructor(
+    private readonly captchaService: CaptchaService,
+    private readonly reflector: Reflector,
+  ) {}
 
   async canActivate(context: ExecutionContext): Promise<boolean> {
     const request = context.switchToHttp().getRequest<Request>();
     const captchaHeader = request.headers['x-captcha'];
+
+    const scope = this.reflector.get<'registration'>(
+      CaptchaScope,
+      context.getHandler(),
+    );
+
+    if (!scope) {
+      throw new Error('CaptchaGuard used on a route without CaptchaScope');
+    }
 
     if (typeof captchaHeader !== 'string') {
       throw new InvalidCaptchaStampError();
@@ -24,7 +38,7 @@ export class CaptchaGuard implements CanActivate {
       throw new MalformedCaptchaStampError();
     }
 
-    await this.captchaService.validateCaptcha(id, text);
+    await this.captchaService.validateCaptcha(id, text, scope);
 
     return true;
   }
