# src/presentation/ident/controllers/dtos/get-captcha-query.dto.ts
@@ -1,0 +1,7 @@
+import { IsEnum, IsString } from 'class-validator';
+
+export class GetCaptchaQueryDto {
+  @IsString()
+  @IsEnum(['registration'])
+  public scope: 'registration';
+}
