# src/presentation/ident/controllers/dtos/get-pow-query.dto.ts
@@ -1,0 +1,7 @@
+import { IsEnum, IsString } from 'class-validator';
+
+export class GetPoWQueryDto {
+  @IsString()
+  @IsEnum(['registration'])
+  public scope: 'registration';
+}
